Detail view: Fix action row alignment in IE9

--- a/ui/stylesheets/_detail-view.scss
+++ b/ui/stylesheets/_detail-view.scss
@@ -62,6 +62,11 @@
         display: inline-block;
         height: 50px;
         overflow: hidden;
+        position: relative;
+        float: left;
+        display: block;        
+
+        @include span-columns(12);
         @include row;
 
         .buttons {
